changed file names so as to make gh pages work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pixel Character Generator ~</title>
-    <link rel="stylesheet" href="char_gen_style.css">
+    <link rel="stylesheet" href="style.css">
 
     <script type="text/javascript">
     //Math.floor(Math.random()*NUMBER OF THINGS)+1
